tests/purs/failing/FoldableInstance4.out
Error found:
in module [33mFoldableInstance4[0m
at tests/purs/failing/FoldableInstance4.purs:8:1 - 8:27 (line 8, column 1 - line 8, column 27)

  One or more type variables are in positions that prevent [33mFoldable[0m from being derived.
  To derive this class, make sure that these variables are only used as the final arguments to type constructors, and that those type constructors themselves have instances of [33mData.Foldable.Foldable[0m or [33mData.Bifoldable.Bifoldable[0m.

  tests/purs/failing/FoldableInstance4.purs:
  [90m    6[0m [33m[0m
  [90m    7[0m [33mdata T a = T (forall t. Show t => t -> [7ma[27m)[0m
  [90m    8[0m [33mderive instance Foldable T[0m


See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveInvalidConstructorArg.md for more information,
or to contribute content related to this error.

